# VigiloAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sql.ipynb
